snapshots/syntax/library/functions/datetime/dateadiff/datediff_in_msgbox.snap
---
source: vb6parse/src/syntax/library/functions/datetime/datediff.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Days: \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: DateDiff
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"d\""
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: startDate
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: endDate
                        - kind: RightParenthesis
                          text: )
        - kind: Newline
          text: "\n"
